[package]
name = "ddns-client"
version = "0.1.0"
edition = "2021"
authors = ["xirreal"]

[[bin]]
name = "ddns-client"
path = "src/main.rs"

[dependencies]
home = "0.5.9"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tray-item = "0.9.0"
